--- a/src/namesayer/media/MediaPlayerPaneBasic.fxml
+++ b/src/namesayer/media/MediaPlayerPaneBasic.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.mediaplayer.BasicMediaPlayerController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.media.BasicMediaPlayerController">
    <children>
       <Button fx:id="playButton" layoutX="200.0" layoutY="25.0" mnemonicParsing="false" onAction="#playClicked" prefHeight="50.0" prefWidth="50.0" />
       <Label fx:id="recordingName" alignment="CENTER" layoutY="90.0" prefWidth="450.0" text="Label">
