--- a/src/namesayer/MainScreen.fxml
+++ b/src/namesayer/MainScreen.fxml
@@ -14,7 +14,7 @@
          </font>
       </Label>
       <Button layoutX="44.0" layoutY="519.0" mnemonicParsing="false" text="Help" />
-      <Button layoutX="130.0" layoutY="520.0" mnemonicParsing="false" text="Progress" />
+      <Button layoutX="130.0" layoutY="520.0" mnemonicParsing="false" text="Progress" onAction="#GoToProgressScreen" />
       <Button onAction="#GoToRecordScreen" layoutX="445.0" layoutY="252.0" mnemonicParsing="false" prefHeight="73.0" prefWidth="144.0" text="Record" />
       <Button onAction="#GoToPracticeScreen" layoutX="180.0" layoutY="249.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="144.0" text="Practice" />
    </children>
