--- a/src/namesayer/RecordScreen.fxml
+++ b/src/namesayer/RecordScreen.fxml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.RecordScreenController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.RecordScreenController">
    <children>
-      <ListView fx:id="creationList" layoutX="18.0" layoutY="112.0" prefHeight="352.0" prefWidth="238.0" />
-      <ListView fx:id="recordingList" layoutX="316.0" layoutY="112.0" prefHeight="352.0" prefWidth="450.0" />
-      <Label layoutX="110.0" layoutY="83.0" text="Names">
+      <ListView fx:id="creationList" layoutX="18.0" layoutY="100.0" prefHeight="352.0" prefWidth="238.0" />
+      <ListView fx:id="recordingList" layoutX="316.0" layoutY="100.0" prefHeight="300.0" prefWidth="450.0" />
+      <Label layoutX="109.0" layoutY="70.0" text="Names">
          <font>
             <Font size="18.0" />
          </font></Label>
-      <Label layoutX="491.0" layoutY="83.0" text="Recordings">
+      <Label layoutX="491.0" layoutY="70.0" text="Recordings">
          <font>
             <Font size="18.0" />
          </font></Label>
       <Button layoutX="144.0" layoutY="468.0" mnemonicParsing="false" onAction="#newName" prefHeight="37.0" prefWidth="112.0" text="New Name" />
       <Button layoutX="18.0" layoutY="468.0" mnemonicParsing="false" onAction="#deleteName" prefHeight="37.0" prefWidth="112.0" text="Delete Name" />
-      <Button layoutX="629.0" layoutY="468.0" mnemonicParsing="false" onAction="#newRecording" prefHeight="37.0" prefWidth="137.0" text="New Recording" />
-      <Button layoutX="473.0" layoutY="468.0" mnemonicParsing="false" onAction="#deleteRecording" prefHeight="37.0" prefWidth="137.0" text="Delete Recording" />
-      <Button layoutX="316.0" layoutY="468.0" mnemonicParsing="false" onAction="#rateRecording" prefHeight="37.0" prefWidth="137.0" text="Rate Recording" />
+      <Button layoutX="629.0" layoutY="415.0" mnemonicParsing="false" onAction="#newRecording" prefHeight="37.0" prefWidth="137.0" text="New Recording" />
+      <Button layoutX="473.0" layoutY="415.0" mnemonicParsing="false" onAction="#deleteRecording" prefHeight="37.0" prefWidth="137.0" text="Delete Recording" />
+      <Button layoutX="316.0" layoutY="415.0" mnemonicParsing="false" onAction="#rateRecording" prefHeight="37.0" prefWidth="137.0" text="Rate Recording" />
       <Button layoutX="22.0" layoutY="561.0" mnemonicParsing="false" onAction="#goMain" text="Back" />
       <Label layoutX="200.0" text="Recordings Manager">
          <font>
             <Font name="KacstOne Bold" size="39.0" />
          </font>
       </Label>
+      <Pane layoutX="317.0" layoutY="461.0" prefHeight="125.0" prefWidth="450.0" />
    </children>
 </Pane>
