--- a/src/namesayer/MainScreen.fxml
+++ b/src/namesayer/MainScreen.fxml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.MainScreenController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.MainScreenController">
    <children>
       <Label layoutX="257.0" layoutY="41.0" text="Namesayer">
          <font>
             <Font name="KacstOne Bold" size="41.0" />
          </font>
       </Label>
-      <Button layoutX="236.0" layoutY="402.0" mnemonicParsing="false" onAction="#GoToHelpScreen" prefHeight="25.0" prefWidth="147.0" text="Help" />
-      <Button layoutX="400.0" layoutY="402.0" mnemonicParsing="false" onAction="#GoToProgressScreen" prefHeight="25.0" prefWidth="137.0" text="Progress" />
+      <Button layoutX="236.0" layoutY="402.0" mnemonicParsing="false" onAction="#GoToHelpScreen" prefHeight="27.0" prefWidth="86.0" text="Help" />
+      <Button layoutX="344.0" layoutY="402.0" mnemonicParsing="false" onAction="#GoToProgressScreen" prefHeight="27.0" prefWidth="86.0" text="Progress" />
       <Button layoutX="235.0" layoutY="300.0" mnemonicParsing="false" onAction="#GoToRecordScreen" prefHeight="73.0" prefWidth="304.0" text="Record" />
       <Button layoutX="235.0" layoutY="189.0" mnemonicParsing="false" onAction="#GoToPracticeScreen" prefHeight="80.0" prefWidth="304.0" text="Practice" />
+      <Button layoutX="453.0" layoutY="402.0" mnemonicParsing="false" onAction="#GoToImportScreen" prefHeight="27.0" prefWidth="86.0" text="Import" />
    </children>
    <styleClass>
       <String fx:value="background" />
