--- a/src/namesayer/RecordScreen.fxml
+++ b/src/namesayer/RecordScreen.fxml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.RecordScreenController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.RecordScreenController">
    <children>
-      <ListView fx:id="creationList" layoutX="15.0" layoutY="100.0" prefHeight="405.0" prefWidth="200.0" />
-      <ListView fx:id="recordingList" layoutX="250.0" layoutY="100.0" prefHeight="275.0" prefWidth="450.0" />
-      <Label layoutX="96.0" layoutY="24.0" text="Names" />
-      <Label layoutX="451.0" layoutY="24.0" text="Recordings" />
-      <Button layoutX="35.0" layoutY="64.0" mnemonicParsing="false" onAction="#newName" text="New" />
-      <Button layoutX="123.0" layoutY="64.0" mnemonicParsing="false" onAction="#deleteName" text="Delete" />
-      <Button layoutX="393.0" layoutY="64.0" mnemonicParsing="false" onAction="#newRecording" text="New" />
-      <Button layoutX="456.0" layoutY="64.0" mnemonicParsing="false" onAction="#deleteRecording" text="Delete" />
-      <Button layoutX="528.0" layoutY="64.0" mnemonicParsing="false" onAction="#rateRecording" text="Rate" />
-      <Button layoutX="737.0" layoutY="20.0" mnemonicParsing="false" onAction="#goMain" text="Back" />
+      <ListView fx:id="creationList" layoutX="18.0" layoutY="112.0" prefHeight="352.0" prefWidth="238.0" />
+      <ListView fx:id="recordingList" layoutX="316.0" layoutY="112.0" prefHeight="352.0" prefWidth="450.0" />
+      <Label layoutX="110.0" layoutY="83.0" text="Names">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="491.0" layoutY="83.0" text="Recordings">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button layoutX="144.0" layoutY="468.0" mnemonicParsing="false" onAction="#newName" prefHeight="37.0" prefWidth="112.0" text="New Name" />
+      <Button layoutX="18.0" layoutY="468.0" mnemonicParsing="false" onAction="#deleteName" prefHeight="37.0" prefWidth="112.0" text="Delete Name" />
+      <Button layoutX="629.0" layoutY="468.0" mnemonicParsing="false" onAction="#newRecording" prefHeight="37.0" prefWidth="137.0" text="New Recording" />
+      <Button layoutX="473.0" layoutY="468.0" mnemonicParsing="false" onAction="#deleteRecording" prefHeight="37.0" prefWidth="137.0" text="Delete Recording" />
+      <Button layoutX="316.0" layoutY="468.0" mnemonicParsing="false" onAction="#rateRecording" prefHeight="37.0" prefWidth="137.0" text="Rate Recording" />
+      <Button layoutX="22.0" layoutY="561.0" mnemonicParsing="false" onAction="#goMain" text="Back" />
+      <Label layoutX="200.0" text="Recordings Manager">
+         <font>
+            <Font name="KacstOne Bold" size="39.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
