Modified import module so it can be used to import playlists (using an additional 'by-line' method in the interface). Organised directory structure. Had to copy the CSS files twice, probably not going to try and fix this.

--- a/src/namesayer/fxml/MainScreen.fxml
+++ b/src/namesayer/fxml/MainScreen.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.MainScreenController">
+<Pane stylesheets="@application.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.controller.MainScreenController">
    <children>
       <Label layoutX="286.0" layoutY="54.0" text="Namesayer">
          <font>
@@ -15,7 +15,7 @@
       </Label>
       <Button layoutX="236.0" layoutY="402.0" mnemonicParsing="false" onAction="#GoToHelpScreen" prefHeight="27.0" prefWidth="86.0" text="Help" />
       <Button layoutX="344.0" layoutY="402.0" mnemonicParsing="false" onAction="#GoToProgressScreen" prefHeight="27.0" prefWidth="86.0" text="Progress" />
-      <Button layoutX="235.0" layoutY="300.0" mnemonicParsing="false" onAction="#GoToRecordScreen" prefHeight="73.0" prefWidth="304.0" text="Record" />
+      <Button layoutX="235.0" layoutY="300.0" mnemonicParsing="false" onAction="#GoToRecordScreen" prefHeight="73.0" prefWidth="304.0" text="Database" />
       <Button layoutX="235.0" layoutY="189.0" mnemonicParsing="false" onAction="#GoToPracticeScreen" prefHeight="80.0" prefWidth="304.0" text="Practice" />
       <Button layoutX="453.0" layoutY="402.0" mnemonicParsing="false" onAction="#GoToImportScreen" prefHeight="27.0" prefWidth="86.0" text="Import" />
       <Button layoutX="14.0" layoutY="559.0" mnemonicParsing="false" onAction="#exit" text="Exit" />
