--- a/src/namesayer/fxml/RecordingPane.fxml
+++ b/src/namesayer/fxml/RecordingPane.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" styleClass="pane" stylesheets="@../application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.media.RecordingModuleController">
+<Pane stylesheets="@application.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" styleClass="pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.controller.RecordingModuleController">
    <children>
       <Separator layoutY="200.0" prefWidth="400.0" />
       <Button layoutX="147.0" layoutY="220.0" mnemonicParsing="false" onAction="#testMicrophone" text="Test Microphone" />
