--- a/src/namesayer/fxml/HelpScreen.fxml
+++ b/src/namesayer/fxml/HelpScreen.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.HelpScreenController">
+<Pane stylesheets="@application.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.controller.HelpScreenController">
    <children>
       <Button layoutX="45.0" layoutY="540.0" mnemonicParsing="false" onAction="#GoToMainScreen" text="Back" />
       <TextArea fx:id="helpText" layoutX="30.0" layoutY="52.0" prefHeight="470.0" prefWidth="738.0" />
