--- a/src/namesayer/fxml/ImportScreen.fxml
+++ b/src/namesayer/fxml/ImportScreen.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.ImportScreenController">
+<Pane stylesheets="@application.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.controller.ImportScreenController">
    <children>
       <Label layoutX="108.0" layoutY="166.0" text="Here you can manage multiple databases by saving and loading them to your filesystem." />
       <Label layoutX="205.0" layoutY="38.0" text="Import/Export Data">
