--- a/src/namesayer/fxml/ProgressScreen.fxml
+++ b/src/namesayer/fxml/ProgressScreen.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane id="progressGraph" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.ProgressScreenController">
+<Pane stylesheets="@application.css" id="progressGraph" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.controller.ProgressScreenController">
    <children>
       <Button layoutX="23.0" layoutY="559.0" mnemonicParsing="false" onAction="#GoToMainScreen" text="Back" />
       <Button layoutX="326.0" layoutY="539.0" mnemonicParsing="false" onAction="#updateProgress" prefHeight="41.0" prefWidth="163.0" text="Update My Progress" />
