--- a/src/namesayer/PracticeScreen.fxml
+++ b/src/namesayer/PracticeScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -8,31 +9,23 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.PracticeScreenController">
    <children>
-      <Label layoutX="297.0" text="Practice">
+      <Label layoutX="302.0" layoutY="91.0" text="Practice ">
          <font>
-            <Font name="KacstOne Bold" size="39.0" />
+            <Font name="System Bold" size="51.0" />
          </font>
       </Label>
-      <ListView fx:id="firstNameList" layoutX="18.0" layoutY="124.0" prefHeight="328.0" prefWidth="250.0" />
-      <ListView fx:id="lastNameList" layoutX="275.0" layoutY="124.0" prefHeight="328.0" prefWidth="250.0" />
-      <ListView fx:id="playlist" layoutX="536.0" layoutY="124.0" prefHeight="328.0" prefWidth="250.0" />
-      <Label layoutX="18.0" layoutY="101.0" prefHeight="21.0" prefWidth="125.0" text="First Name:">
+      <Button layoutX="33.0" layoutY="559.0" mnemonicParsing="false" text="Back" onAction="#returnToHome"/>
+      <Button layoutX="39.0" layoutY="438.0" mnemonicParsing="false" prefHeight="76.0" prefWidth="164.0" text="Previous" />
+      <Button layoutX="601.0" layoutY="444.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="164.0" text="Next" />
+      <Text id="currentName" layoutX="337.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="[NAME]">
          <font>
-            <Font size="18.0" />
-         </font></Label>
-      <Label layoutX="275.0" layoutY="101.0" text="Last Name:">
-         <font>
-            <Font size="18.0" />
-         </font></Label>
-      <Label layoutX="537.0" layoutY="101.0" text="Playlist:">
-         <font>
-            <Font size="18.0" />
-         </font></Label>
-      <Button layoutX="165.0" layoutY="464.0" mnemonicParsing="false" onAction="#addNameToPlaylist" prefHeight="53.0" prefWidth="221.0" text="Add To Playlist" />
-      <Button layoutX="543.0" layoutY="519.0" mnemonicParsing="false" onAction="#removeNameFromPlayList" prefHeight="25.0" prefWidth="111.0" text="Remove" />
-      <Button layoutX="18.0" layoutY="561.0" mnemonicParsing="false" onAction="#GoToMainScreen" text="Back" />
-      <Button layoutX="165.0" layoutY="519.0" mnemonicParsing="false" onAction="#clearNameSelection" prefHeight="25.0" prefWidth="221.0" text="Clear Name Selection" />
-      <Button layoutX="543.0" layoutY="464.0" mnemonicParsing="false" onAction="#playPlaylist" prefHeight="53.0" prefWidth="236.0" text="Play All" />
-      <Button layoutX="668.0" layoutY="519.0" mnemonicParsing="false" onAction="#playSelectedName" prefHeight="25.0" prefWidth="111.0" text="Play Selected" />
+            <Font name="System Bold" size="33.0" />
+         </font>
+      </Text>
+      <Button layoutX="346.0" layoutY="300.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="164.0" text="Record Your Attempt" />
+      <Button layoutX="343.0" layoutY="372.0" mnemonicParsing="false" text="Listen To Your Attempt" />
+      <Button layoutX="343.0" layoutY="399.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="170.0" text="Listen To Database" />
+      <Text id="previousName" layoutX="44.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Previous Name" />
+      <Text id="nextName" layoutX="645.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Next Name" />
    </children>
 </Pane>
