--- a/src/namesayer/fxml/PracticeScreen.fxml
+++ b/src/namesayer/fxml/PracticeScreen.fxml
@@ -24,8 +24,8 @@
       </Text>
       <Button layoutX="346.0" layoutY="300.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="164.0" text="Record Your Attempt" />
       <Button layoutX="343.0" layoutY="372.0" mnemonicParsing="false" text="Listen To Your Attempt" />
-      <Button layoutX="343.0" layoutY="399.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="170.0" text="Listen To Database" />
-      <Text id="previousName" layoutX="44.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Previous Name" />
-      <Text id="nextName" layoutX="645.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Next Name" />
+      <Button layoutX="343.0" layoutY="399.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="170.0" text="Listen To Database" onAction="#playNameFromDatabase"/>
+      <Text fx:id="previousName" layoutX="44.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Previous Name" />
+      <Text fx:id="nextName" layoutX="645.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Next Name" />
    </children>
 </Pane>
