--- a/src/namesayer/fxml/PracticeScreen.fxml
+++ b/src/namesayer/fxml/PracticeScreen.fxml
@@ -26,7 +26,7 @@
          </font>
       </Text>
       <Button layoutX="311.0" layoutY="276.0" mnemonicParsing="false" onAction="#recordAttempt" prefHeight="70.0" prefWidth="179.0" text="Record Your Attempt" />
-      <Button layoutX="311.0" layoutY="352.0" mnemonicParsing="false" onAction="#listenAttempt" prefHeight="27.0" prefWidth="179.0" text="Listen To Your Attempt" />
+      <Button fx:id="playAttempt" layoutX="311.0" layoutY="352.0" mnemonicParsing="false" onAction="#listenAttempt" prefHeight="27.0" prefWidth="179.0" text="Listen To Your Attempt" />
       <Text fx:id="previousName" layoutX="72.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Previous Name" />
       <Text fx:id="nextName" layoutX="645.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Next Name" />
    </children>
