--- a/src/namesayer/fxml/PracticeScreen.fxml
+++ b/src/namesayer/fxml/PracticeScreen.fxml
@@ -20,14 +20,14 @@
       <Button layoutX="33.0" layoutY="559.0" mnemonicParsing="false" onAction="#returnToHome" text="Back" />
       <Button fx:id="previousButton" layoutX="39.0" layoutY="438.0" mnemonicParsing="false" onAction="#previousName" prefHeight="76.0" prefWidth="164.0" text="Previous" />
       <Button fx:id="nextButton" layoutX="601.0" layoutY="444.0" mnemonicParsing="false" onAction="#nextName" prefHeight="70.0" prefWidth="164.0" text="Next" />
-      <Text fx:id="currentName" fill="#802424" layoutX="329.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="[NAME]">
+      <Text fx:id="currentName" fill="#802424" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="[NAME]" textAlignment="CENTER" wrappingWidth="800.0">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
       </Text>
       <Button layoutX="311.0" layoutY="276.0" mnemonicParsing="false" onAction="#recordAttempt" prefHeight="70.0" prefWidth="179.0" text="Record Your Attempt" />
       <Button fx:id="playAttempt" layoutX="311.0" layoutY="352.0" mnemonicParsing="false" onAction="#listenAttempt" prefHeight="27.0" prefWidth="179.0" text="Listen To Your Attempt" />
-      <Text fx:id="previousName" layoutX="72.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Previous Name" />
-      <Text fx:id="nextName" layoutX="645.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Next Name" />
+      <Text fx:id="previousName" layoutX="2.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Previous Name" textAlignment="CENTER" wrappingWidth="237.93798828125" />
+      <Text fx:id="nextName" layoutX="576.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Next Name" textAlignment="CENTER" wrappingWidth="224.0" />
    </children>
 </Pane>
