fixed progress graph axis

--- a/src/namesayer/fxml/ProgressScreen.fxml
+++ b/src/namesayer/fxml/ProgressScreen.fxml
@@ -10,7 +10,7 @@
       <Button layoutX="23.0" layoutY="559.0" mnemonicParsing="false" onAction="#GoToMainScreen" text="Back" />
       <LineChart fx:id="progressGraph" layoutX="75.0" layoutY="58.0" prefHeight="463.0" prefWidth="650.0" title="Namesayer Progress">
         <xAxis>
-          <CategoryAxis side="BOTTOM" />
+          <NumberAxis side="BOTTOM" />
         </xAxis>
         <yAxis>
           <NumberAxis side="LEFT" />
